--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,25 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: SharifBible.com
+email: info@sharifbible.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The Sharif Bible is the complete Bible in modern Arabic. It is a dynamic translation, 
+  and attempts to transfer the meaning of the original text into simple, modern, standard, 
+  literary Arabic. This is meant to be understandable across the Arab world, so regional
+  words and expressions are avoided. This translation holds dearly to being as accurate 
+  and faithful to the original text as possible, natural (in language familiar to the reader), 
+  clear, and easy to understand. It is an accurate translation of the original Hebrew and 
+  Greek texts into the people's simple language.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: sharifbible
+github_username:  sharifbibleadmin
 
 # Build settings
 markdown: kramdown
-theme: minima
+sass:
+  sass_dir: css
 plugins:
   - jekyll-feed
 
