--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,11 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sharifbible
 github_username:  sharifbibleadmin
+defaults:
+  - scope: 
+      path: "images"
+    values:
+      image: true
 
 # Build settings
 markdown: kramdown
