--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   clear, and easy to understand. It is an accurate translation of the original Hebrew and
   Greek texts into the people's simple language.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://sharifbible.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 lang: en
 sitesearchurl: "sharifbible.com"
 twitter_username: sharifbible
