Fixing the issue with scss/ghpages

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,10 @@ defaults:
 # Build settings
 markdown: kramdown
 sass:
-  sass_dir: node_modules
+  sass_dir: css
+  load_paths:
+    - node_modules
+  style: compact
 plugins:
   - jekyll-feed
   - jekyll-redirect-from
