Correct Google SV tag

--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,4 @@ social:
   links:
     - https://www.twitter.com/SharifBible
     # - don't know the facebook link
-webmaster_verification:
-  google: wLAwiHXO_7MFpJM-njc-j6QHchzfzwSofdpHCnPxepc
-  # bing:
+google_site_verification: wLAwiHXO_7MFpJM-njc-j6QHchzfzwSofdpHCnPxepc
