Corrected line of text

--- a/_data/bibles.yml
+++ b/_data/bibles.yml
@@ -19,7 +19,7 @@
   alt: Luke-Acts Diglot
   en:
     title: Luke-Acts Diglot
-    description: Arabic and English side-by-side, presenting the gospel as told by Luke as well as the his Book of Acts. We hope to see the Sharif New Testament appear in English, and this is the first installment. It's help for Arabic speakers who are learning English and English speakers who are learning Arabic.
+    description: Arabic and English side-by-side, presenting the gospel as told by Luke as well as the Book of Acts. We hope to see the Sharif New Testament appear in English, and this is the first installment. It's help for Arabic speakers who are learning English and English speakers who are learning Arabic.
   ar:
     description: 
 -
