--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -79,5 +79,5 @@
     ref:
   ar: 
     title: لماذا الشريف؟
-    quote: زُرْ صفحتنا لماذا الشريف؟ لترى ما هي المميزات التي تجعل الكتاب الشريف ترجمة فريدة من نوع. نزّلْ الكتاب في العربية أو ملخص له في الإنطليزية.   
+    quote: زُرْ صفحتنا "لماذا الشريف؟" لترى ما هي المميزات التي تجعل الكتاب الشريف ترجمة فريدة من نوع. نزّلْ هذا الكتاب في العربية أو ملّخص عنه في الإنكليزية.   
     ref:
