Corrected grammar mistake in Bible description

--- a/_data/bibles.yml
+++ b/_data/bibles.yml
@@ -29,4 +29,4 @@
     title: Pulpit New Testament
     description: A large-print edition of the New Testament. You might enjoy placing it open on a stand in your home or place of public gathering.
   ar:
-    description: هذه أكبر نسخة لدينا من الإنجيل الشريف. ممكن تستمتع من وضعه مفتوحا على حامل في بيتك. وبالنسبة لأولئك الذين يعانون من ضعف البصر، فالخط الكبير يجعل القراءة سهل جدا.
+    description: هذه أكبر نسخة لدينا من الإنجيل الشريف. ممكن تستمتع من وضعه مفتوحا على حامل في بيتك. وبالنسبة لأولئك الذين يعانون من ضعف البصر، فالخط الكبير يجعل القراءة سهلة جدا.
